fixed Capitalization in heading and alignment of footer columns

--- a/app/styles/partials/footer.scss
+++ b/app/styles/partials/footer.scss
@@ -27,6 +27,10 @@ footer {
   }
 }
 
+.ui.inverted.link.list {
+  text-align: left;
+}
+
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { // sass-lint:disable-line no-vendor-prefixes
   .main-container {
     margin: $page-top-margin 0;
